--- a/workflows/snake.yml
+++ b/workflows/snake.yml
@@ -1,24 +1,2 @@
-name: Generate Snake Animation
-
-on:
-  schedule:
-    - cron: "0 0 * * *" # every day at midnight
-  workflow_dispatch:
-
-jobs:
-  generate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Generate snake.svg
-        uses: Platane/snk@v3.3.0
-        with:
-          github_user_name: MPIO1002
-          outputs: dist/github-contribution-grid-snake.svg
-
-      - name: Commit and Push
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+- name: generate-snake-game-from-github-contribution-grid
+  uses: Platane/snk@v3.3.0
